--- a/Thangam.html
+++ b/Thangam.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
     content="width=device-width, initial-scale=1.0"/>
     <title>Digital Portfolio</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="Thangam.css"/>
 </head>
 <body>
     <header>
@@ -70,6 +70,7 @@
 
     <footer>&copy;2025 Thangamuthu - All Rights Reserved</footer>
 
-    <script src="script.js"></script>
+    <script src="Thangam.js"></script>
 </body>
+
 </html>
