--- a/Thangam.html
+++ b/Thangam.html
@@ -22,7 +22,7 @@
     <section id="About">
   <div class="container"> 
     <div>
-        <img class="tm" src="img/naan.jpg" alt="image">
+        <img class="tm" src="naan.jpg" alt="image">
     </div>
     <div class="data">      
         <h2>About Me</h2>
@@ -74,3 +74,4 @@
 </body>
 
 </html>
+
